# Team2-PaintingGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
Assets/: MeshesCube.msh
Assets/Data/: Arena.navmesh  BasicLVL.navmesh  BasicLVL1.navmesh  BasicLVL2.navmesh  GameMaze3.txt  NewBasicLVL.navmesh  NewLevel4.navmesh  Newlevel.navmesh  SplatAtTheMuseum.txt  Test  TestGrid2.txt
Assets/Meshes/: AJIdle.anm  AJRun.anm  Aj_TPose.mat  Aj_TPose.msh  Arena.msh  BasicLVL.mat  BasicLVL.msh  BasicLVL1.mat  BasicLVL1.msh  Floor.msh  Goat.mat  Goat.msh  Gun.mat  Gun.msh  Idle1.anm  JA.mat  (+37 more)
GNMRendering/: CMakeLists.txt  GNMAssetLoader.cpp  GNMAssetLoader.h  GNMComputeShader.cpp  GNMComputeShader.h  GNMMesh.cpp  GNMMesh.h  GNMRenderer.cpp  GNMRenderer.h  GNMShader.cpp  GNMShader.h  GNMTexture.cpp  GNMTexture.h
GameEngine/: CMakeLists.txt  Utils.h
GameEngine/AI/BehaviorTrees/: BehaviourAction.h  BehaviourNode.h  BehaviourNodeWithChildren.h
GameEngine/AI/PathFinding/: NavigationGrid.cpp  NavigationGrid.h  NavigationMap.h  NavigationMesh.cpp  NavigationMesh.h  NavigationPath.h  SecurityCallbackClass.h
GameEngine/AI/PushdownAutomata/: IntroScreen.cpp  IntroScreen.h  LanScreen.cpp  LanScreen.h  PauseScreen.cpp  PauseScreen.h  PushdownMachine.cpp  PushdownMachine.h  PushdownState.h  SinglePlayerScreen.cpp  SinglePlayerScreen.h  SplitScreen.cpp  SplitScreen.h
GameEngine/AI/StateMachine/: State.h  StateMachine.cpp  StateMachine.h  StateTransition.h
GameEngine/AssetsHandling/: AssetLoader.h  Assets.h  CollisionDetection.cpp  CollisionDetection.h  Ray.h  SimpleFont.cpp  SimpleFont.h  TextureLoader.cpp  TextureLoader.h
GameEngine/Audio/: Sound.cpp  Sound.h  SoundEmitter.cpp  SoundEmitter.h  SoundManager.cpp  SoundManager.h  SoundSystem.cpp  SoundSystem.h
GameEngine/Debugging/: Debug.cpp  Debug.h
GameEngine/EntityComponents/: AnimatedObject.cpp  AnimatedObject.h  GameObject.cpp  GameObject.h  Layer.h  LoadingSceneNode.cpp  LoadingSceneNode.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  RenderObject.cpp  RenderObject.h  SceneNode.cpp  SceneNode.h  StateGameObject.cpp  StateGameObject.h  Transform.cpp  Transform.h
GameEngine/Graphics/Camera/: Camera.cpp  Camera.h  ScoreCamera.cpp  ScoreCamera.h
GameEngine/Graphics/Lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
GameEngine/Graphics/Renderer/: GameTechRenderer.cpp  GameTechRenderer.h  GameTechVulkanRenderer.cpp  GameTechVulkanRenderer.h
GameEngine/Graphics/Renderer/RenderingSupport/: AnimationController.cpp  AnimationController.h  MeshGeometry.cpp  MeshGeometry.h  MeshMaterial.cpp  MeshMaterial.h  RendererBase.h  TextureHUD.h
GameEngine/Graphics/UI/: MenuHandler.cpp  MenuHandler.h  UIHandler.cpp  UIHandler.h
GameEngine/Maths/: Maths.cpp  Maths.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Quaternion.cpp  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
GameEngine/Physics/: Constraint.h  OrientationConstraint.cpp  OrientationConstraint.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h
GameEngine/Physics/CollisionDetection/: AABBVolume.h  CollisionDetection.cpp  CollisionDetection.h  OBBVolume.h  QuadTree.h  Ray.h
GameEngine/Scene/: AnimationController.cpp  AnimationController.h  Bullet.cpp  Bullet.h  GameWorld.cpp  GameWorld.h  InputController.cpp  InputController.h  PaintingObject.h  PlayerBase.cpp  PlayerBase.h  PlayerController.cpp  PlayerController.h  ScoreBar.h
GameEngine/Scene/Terrain/: Terrain.cpp  Terrain.h  TerrainTexturePack.h
GameEngine/WindowingAndInput/: InputBase.cpp  InputBase.h  Window.cpp
GameEngine/WindowingAndInput/PS4/: PS4Frame.cpp  PS4Frame.h  PS4Gamepad.cpp  PS4Gamepad.h  PS4MemoryAware.cpp  PS4MemoryAware.h  PS4Window.cpp  PS4Window.h
GameEngine/WindowingAndInput/Win32/: Win32Window.cpp  Win32Window.h  Win32XBoxGamepad.cpp  Win32XBoxGamepad.h  XBoxGamepad.cpp  XBoxGamepad.h
Networking/: CMakeLists.txt  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.cpp  NetworkState.h
OpenGLRendering/: CMakeLists.txt  OGLAssetLoader.cpp  OGLAssetLoader.h  OGLComputeShader.cpp  OGLComputeShader.h  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLSkybox.cpp  OGLSkybox.h  OGLTexture.cpp  OGLTexture.h
PaintingGame/: CMakeLists.txt  EventListener.cpp  EventListener.h  GameAssets.cpp  GameAssets.h  GameManager.cpp  GameManager.h  Main.cpp  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  PaintingGame.cpp  PaintingGame.h  PlatformConfigurations.h  ScoreManager.cpp  ScoreManager.h  ScreenManager.cpp  ScreenManager.h  SinglePlayerGame.cpp  SinglePlayerGame.h  SplitScreenGame.cpp  SplitScreenGame.h
PaintingGame/GameObjects/: Box.h  Floor.h  Gun.h  HUDOnLoad.h  HudElement.cpp  HudElement.h  Ink.cpp  Ink.h  MuseumItem.h  PaintingObject.h  Player.cpp  Player.h  SecurityGuard.cpp  SecurityGuard.h  Wall.h
PaintingGame/Player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerControllers.h
PaintingGame/Renderers/: GNMPaintingGameRenderer.cpp  GNMPaintingGameRenderer.h  OGLPaintingGameRenderer.cpp  OGLPaintingGameRenderer.h
PaintingGame/Screens/: BaseScreen.cpp  BaseScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  IntroScreen.cpp  LanScreen.cpp  LanScreen.h  LoadingScreen.cpp  LoadingScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  PauseScreen.cpp  PauseScreen.h  ScreenManager.cpp  ScreenManager.h  SinglePlayerScreen.cpp  SinglePlayerScreen.h  SplashScreen.cpp  SplashScreen.h  SplitScreen.cpp
SampleGame/: CMakeLists.txt  Main.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  SampleGame.cpp  SampleGame.h
VulkanRendering/: CMakeLists.txt  Precompiled.h  VulkanCompute.cpp  VulkanDynamicRenderBuilder.cpp  VulkanDynamicRenderBuilder.h  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderBuilder.h  VulkanTexture.cpp  VulkanTexture.h
(+116 files in other folders)
